# LeverX-Homework-3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  db.py
app/repositories/: base.py  reports_repository.py  rooms_repository.py  students_repository.py
app/services/: import_service.py  json_loader.py
reports/: mixed_sex_rooms.txt  rooms_student_counts.txt  top5_largest_age_gap.txt  top5_smallest_avg_age.txt
